--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ metal = "0.22"
 cocoa = "0.24.0"
 objc = "0.2.5"
 
-piet-gpu = { path = "../piet-gpu/piet-gpu" }
-piet-gpu-hal = { path = "../piet-gpu/piet-gpu-hal" }
+#piet-gpu = { path = "../piet-gpu/piet-gpu" }
+#piet-gpu-hal = { path = "../piet-gpu/piet-gpu-hal" }
+piet-gpu = { git = "https://github.com/linebender/piet-gpu", rev = "2613a7e" }
+piet-gpu-hal = { git = "https://github.com/linebender/piet-gpu", rev = "2613a7e" }
